--- a/InfoApp/templates/index.html
+++ b/InfoApp/templates/index.html
@@ -110,6 +110,22 @@
               </ul>
             </div>
           </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+              <span class="menu-icon">
+                <i class="mdi mdi-laptop"></i>
+              </span>
+              <span class="menu-title">Contacts</span>
+              <i class="menu-arrow"></i>
+            </a>
+            <div class="collapse" id="ui2-basic">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="{% url 'Contact_details' %}">View Contact </a></li>
+              </ul>
+            </div>
+          </li>
+
+
 
           <li class="nav-item menu-items">
             <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
