--- a/Webapp/templates/Project.html
+++ b/Webapp/templates/Project.html
@@ -59,12 +59,13 @@
     </header><!-- end of page header -->
 
   <div class="container my-5" id="project">
-    <div class="row g-4">
-        {% for project in projects %}
-            <div class="col-md-4">
-                <div class="card shadow-lg rounded-3">
-                    <!-- Image Slider -->
-                    <div id="carousel{{ forloop.counter }}" class="carousel slide" data-bs-ride="carousel">
+<div class="row g-4 justify-content-center">
+    {% for project in projects %}
+        <div class="col-md-6 d-flex justify-content-center">
+            <div class="card shadow-lg rounded-3 project-card" style="width: 100%; max-width: 600px; height: 600px; display: flex; flex-direction: column;">
+                <!-- Image Slider -->
+                <div id="carousel{{ forloop.counter }}" class="carousel slide" data-bs-ride="carousel">
+
                         <div class="carousel-inner">
                             {% if project.img1 %}
                                 <div class="carousel-item active">
